--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="author" content="Alen Zgurić">
     <meta name="publisher" content="Zguric App's">
-    <meta name="copyright" content="Copyright © 2023">
-    <meta name="description" content="Ovo je web aplikacija za svrhu završnog rada kao front-end developers.">
+    <meta name="copyright" content="CopyRight © 2023">
+    <meta name="description" content="Ovo je web aplikacija za svrhu završnog rada kao front-end developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
