--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Ovo je web aplikacija za svrhu završnog rada kao front-end developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icons8-internet-32.png" />
+
 
     
     
