--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/icons8-internet-32.png" />
+  
 
 
     
@@ -42,5 +43,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src='https://cdn.scaledrone.com/scaledrone.min.js' type='text/javascript'></script>
+
   </body>
 </html>
