changes in the code on the chat component

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/icons8-internet-32.png" />
+
+    <script  defer src='https://cdn.scaledrone.com/scaledrone.min.js' type='text/javascript'></script>
+
   
 
 
