--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/icons8-internet-32.png" />
 
     <script  defer src='https://cdn.scaledrone.com/scaledrone.min.js' type='text/javascript'></script>
+    <script src='https://cdn.scaledrone.com/scaledrone-lite.min.js' type='text/javascript'></script>
 
   
 
