google meta name

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Chat App</title>
+    <meta name="google-site-verification" content="Y2BCKOvwHSNiVmJMIVNCJQQMgorfBajjW02Y2dmuKQs" />
   </head>
   <body>
     <noscript>Morate uklučiti JavaScript u vašem pregledniku...</noscript>
