change meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="Alen Zgurić">
-    <meta name="publisher" content="Zguric App's">
+    <meta name="publisher" content="Alen Zgurić">
     <meta name="copyright" content="CopyRight © 2023">
     <meta name="description" content="Ovo je web aplikacija za svrhu završnog rada kao front-end developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
